test/success/static-struct.dsk
let Api = struct
    #Static fields
    let ip = "127.0.0.1"
    let mut port: string = "8080"

    #Fields
    endpoint: string = ""


    #Methods
    let fetch = (self: @) -> string
        return self.ip
    end
end

let api = Api("/me")

Api.port = ":9090"

echo(api.fetch())
echo(Api.fetch(api))
echo(Api.port)



