test/error/sema/invalid-struct-function.dsk
let S = struct
    x: int
    f: (self: @) -> void
        return
    end
end

let s = S(x = 1)
s.g()
